Added asset handling for CSS, JS, and images

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
 <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h1>Welcome to <%= title %>!</h1>
     <p><%= description %></p>
     <div><%- content %></div>
+    <script src="assets/js/script.js"></script>
 </body>
-</html>
